--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ aux_source_directory(. SRC_LIST)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11 -O3 -g")
 
 #header files compilation
-set(HEADER_FILES Board.hpp Board0x88.hpp)
+set(HEADER_FILES Board.hpp Board0x88.hpp engine_constants.hpp utility_constants.hpp)
 
 #liblemon dynamic library
 add_library(liblemon SHARED ${HEADER_FILES})
