--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11 -O3 -g")
 
 #header files compilation
 set(HEADER_FILES Board.hpp Board0x88.hpp board0x88_constants.hpp engine_constants.hpp utility_constants.hpp utility_functions.hpp
-    Piece.hpp Move.hpp Timers.hpp)
+    Piece.hpp Move.hpp Timers.hpp PerftData.hpp)
 
 #liblemon dynamic library
 add_library(liblemon SHARED ${HEADER_FILES})
