--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,7 @@ aux_source_directory(. SRC_LIST)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11 -O3 -g")
 
 #header files compilation
-set(HEADER_FILES Board.hpp BitBoard.hpp engine_constants.hpp utility_constants.hpp utility_functions.hpp
-    Piece.hpp Move.hpp Timers.hpp PerftData.hpp)
+set(HEADER_FILES BitBoard.hpp bb_definitions.hpp utility_functions.hpp Timers.hpp PerftData.hpp)
 
 #liblemon dynamic library
 add_library(liblemon SHARED ${HEADER_FILES})
