movegen works correctly!! different perfts added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,3 +24,5 @@ target_link_libraries(gen_target_masks liblemon)
 #perft executable
 add_executable(perftbb perftbb.cpp)
 target_link_libraries(perftbb liblemon)
+add_executable(seriousperft seriousperft.cpp)
+target_link_libraries(seriousperft liblemon)
