--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ cmake_minimum_required(VERSION 2.8)
 
 aux_source_directory(. SRC_LIST)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11 -O3 -msse3 -g")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11 -fomit-frame-pointer -O3 -msse3 -march=corei7 -g")
 
 #header files compilation
 set(HEADER_FILES BitBoard.hpp lemon.hpp utility_functions.hpp utility_constants.hpp Timers.hpp PerftData.hpp Move.hpp MoveList.hpp)
